--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_native_splash: ^2.2.7
   animated_text_kit: ^4.2.2
+  flutter_signin_button: ^2.0.0
 
 dev_dependencies:
   flutter_test:
