--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-   - assets/images/
+    - assets/images/cart.png
 
   fonts:
     - family: Lato
