--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   flutter_native_splash: ^2.2.7
   animated_text_kit: ^4.2.2
   flutter_signin_button: ^2.0.0
+  firebase_core: ^1.20.0
 
 dev_dependencies:
   flutter_test:
