--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   animated_text_kit: ^4.2.2
   flutter_signin_button: ^2.0.0
   firebase_core: ^1.20.0
+  firebase_auth: ^3.6.2
 
 dev_dependencies:
   flutter_test:
