--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   flutter_signin_button: ^2.0.0
   firebase_core: ^1.20.0
   firebase_auth: ^3.6.2
+  legacy_progress_dialog: ^0.1.2
 
 dev_dependencies:
   flutter_test:
