--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   firebase_core: ^1.20.0
   firebase_auth: ^3.6.2
   legacy_progress_dialog: ^0.1.2
+  pin_code_fields: ^7.4.0
 
 dev_dependencies:
   flutter_test:
