--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   firebase_auth: ^3.6.2
   legacy_progress_dialog: ^0.1.2
   pin_code_fields: ^7.4.0
+  cloud_firestore: ^3.4.3
 
 dev_dependencies:
   flutter_test:
