--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   cloud_firestore: ^3.4.3
   location: ^4.4.0
   geocoder: ^0.2.1
+  google_sign_in: ^5.4.1
 
 dev_dependencies:
   flutter_test:
