--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   location: ^4.4.0
   geocoder: ^0.2.1
   google_sign_in: ^5.4.1
+  flutter_facebook_login: ^3.0.0
+  email_validator: ^2.1.17
 
 dev_dependencies:
   flutter_test:
